--- a/application.yml
+++ b/application.yml
@@ -1,14 +1,18 @@
 spring:
-    profiles:
-        active:
-        -dev
+  profiles:
+    active:
+    - dev
+
 ---
 spring:
-    profiles:dev #开发环境
-    application:
-        name:microservicecloud-config-atguigu-dev
---
+  profiles:
+    active: dev 
+    application:
+        name:microservicecloud-config-atguigu-dev
+     
+---
 spring:
-    profiles:test #测试环境
-    application:
-        name:microservicevloud-config-atguigu-test
+  profiles:
+    active: test 
+    application:
+        name:microservicecloud-config-atguigu-test
